<resources>
    <string name="app_name">AutoMusicTagFixer</string>
    <string name="omit">OMITIR</string>
    <string name="nextSlide">SIGUIENTE</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="step_1">AutoMusicTagFixer te ayudará a mantener más organizada tu biblioteca musical.</string>
    <string name="step_2">¿Cómo lo hará? Corrigiendo el nombre del archivo, título de canción, artista, álbum, etc, incluso la imagen del álbum.</string>
    <string name="step_3">Solo déjala escanear tu biblioteca musical.</string>
    <string name="step_4">Luego toca una cancion para corregirla en modo manual, semiautomático o automático.</string>
    <string name="step_5">O selecciona varias canciones para corregirlas automaticamente, una tras otra sin que hagas algo más, solo esperar.</string>
    <string name="ok_button_last_slide">ENTENDIDO</string>
    <string name="title_activity_folder_choser">Biblioteca de música</string>
    <string name="title_dialog_permision">Permiso de acceso a archivos requerido</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="options">Configuración</string>
    <string name="rate">Calificar</string>
    <string name="share">Compartir</string>
    <string name="search_song">Buscar canción</string>
    <string name="select_all_items">Seleccionar todas</string>
    <string name="share_and_rate">Comparte y califica</string>
    <string name="message_no_data_updated">No se pudo actualizar la canción: </string>
    <string name="message_all_data_updated">Todas las etiquetas actualizadas correctamente.</string>
    <string name="image_too_big">Imagen muy grande, reduce su tamaño.</string>
    <string name="error_load_image">Error al leer la imagen.</string>
    <string name="title_downloaded_cover_art_dialog">Guardar carátula</string>
    <string name="description_downloaded_cover_art_dialog">¿Deseas guardar la carátula como?</string>
    <string name="as_cover_art">Carátula</string>
    <string name="as_file">Imagen</string>
    <string name="no_cover_art_found">No se encontró carátula.</string>
    <string name="no_cover_art">No se encontró carátula</string>
    <string name="cover_art_found">Carátula encontrada</string>
    <string name="cover_updated">Carátula actualizada.</string>
    <string name="cover_removed">Carátula removida.</string>
    <string name="no_available">No disponible</string>
    <string name="explanation_permission_access_files">Para encontrar tus canciones automaticamente, es necesario conceder el permiso solicitado por el cuadro de diálogo que aparecerá después que pulses Aceptar.</string>
    <string name="ok_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="empty_message">Falta esta etiqueta.</string>
    <string name="not_allowed_characters_message">Parece que hay ciertos caracteres inválidos. </string>
    <string name="data_too_long_message">Esta etiqueta es muy larga.</string>
    <string name="file_is_processing">Espera a que el modo automático termine de corregir esta canción.</string>
    <string name="title_dialog_file_error">Error en archivo</string>
    <string name="file_error">No se puede leer %1$s por que fue movida, eliminada ó renombrada, ¿Deseas quitarla de la lista?</string>
    <string name="no_items">No hay canciones en la lista.</string>
    <string name="faq">Preguntas frecuentes</string>
    <string name="play_track">Escuchar</string>
    <string name="confirm_correction_title">Modo automático</string>
    <string name="confirm_correction">Selecciona modo de correción para </string>
    <string name="manual_mode">Modo manual</string>
    <string name="snackbar_message_track_preview">Presiona para detener.</string>
    <string name="snackbar_message_track_is_processing">No puedes reproducir la canción mientras se corrige.</string>
    <string name="permission_denied">No se obtuvo el permiso requerido para escanear tu biblioteca, desliza hacia abajo para intentarlo de nuevo.</string>
    <string name="permission_granted_fail">No se concedio el permiso, actívalo en Configuración->General, para poder corregir las canciones de la SD.</string>
    <string name="permission_granted">Permiso otorgado para corregir las canciones de la SD.</string>
    <string name="current_file_processing">Se esta corriengiendo esta canción.</string>
    <string name="initializing_recognition_api">Conectando al servicio de reconocimiento, un momento por favor…</string>
    <string name="no_internet_connection_download_cover">Para descargar la carátula conectate internet.</string>
    <string name="no_internet_connection_automatic_mode">Para usar el modo automático conectate a internet.</string>
    <string name="no_internet_connection_semi_automatic_mode">Para usar el modo semi automático conectate a internet.</string>
    <string name="no_items_found">No se encontrarón canciones.</string>
    <string name="no_found_tags">No se encontró ninguna coincidencia.</string>
    <string name="file_status_ok">Todas las etiquetas aplicadas.</string>
    <string name="file_status_incomplete">Faltan algunas etiquetas, prueba a añadirlas manualmente.</string>
    <string name="file_status_bad">Sin etiquetas disponibles, intenta añadirlas manualmente.</string>
    <string name="file_status_no_processed">Aún no se han buscado etiquetas para esta canción.</string>
    <string name="file_status_edit_by_user">Canción corregida en modo manual.</string>
    <string name="no_songs_to_correct">Selecciona canciones para usar el modo automático o pulsa sobre cualquiera.</string>
    <string name="begin_processing">Iniciando corrección…</string>
    <string name="querying_info_">Solicitando información de canción…</string>
    <string name="complete_identification">Identificación completa.</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_change">Renombrar archivo</string>
    <string name="pref_title_change_description">El título (si se encuentra) se aplicará como nombre del archivo; se añadirá el nombre del artista más/ó un número aleatorio, en caso que un archivo con nombre igual ya exista.
    </string>
    <string name="pref_manual_title_change">Renombrar archivo</string>
    <string name="pref_manual_title_change_description">El título que hayas escrito se aplicará como nombre del archivo; se añadirá el nombre del artista más/ó un número aleatorio, en caso que un archivo con nombre igual ya exista.
    </string>
    <string name="pref_semi_automatic_title_change">Renombrar archivo</string>
    <string name="pref_semi_automatic_title_change_description">El título (si se encuentra) se aplicará como nombre del archivo cuando guardes los cambios; se añadirá el nombre del artista más/ó un número aleatorio, en caso que un archivo con nombre igual ya exista.

    </string>
    <string name="pref_automatically_replace_strange_chars">Remover caracteres inválidos</string>
    <string name="pref_automatically_replace_strange_chars_description">Se eliminan automaticamente al guardar los cambios.</string>
    <string name="pref_title_background">Usar corrección en segundo plano</string>
    <string name="pref_title_background_description">La corrección de canciones no se cancelerá aún cuando cierres la aplicación, sino hasta que termine o la detengas; se mostrará una notificación con el progreso.</string>
    <string name="enable_embed_player">Multimedia</string>
    <string name="pref_title_enable_embed_player">Usar reproductor integrado</string>
    <string name="pref_enable_embed_player_description">Escuchar canción en el reproductor integrado o usa uno externo.</string>
    <string name="pref_title_replace_all_tags">Sobreescribir etiquetas</string>
    <string name="pref_replace_auto_all_tags_description">Si esta activa esta opción se reemplazarán todas las etiquetas por las encontradas, sino, solo se añadiran las faltantes.</string>
    <string name="default_order_sort">Orden predeterminado de lista</string>
    <string name="pref_title_default_sort">Ordenar por</string>
    <string name="pref_header_size_album_art">Consumo de datos</string>
    <string name="pref_title_size_album_art">Descargar carátula</string>
    <string-array name="pref_size_album_art_titles">
        <item>No descargar</item>
        <item>De la menor calidad disponible</item>
        <item>De baja calidad</item>
        <item>De media calidad</item>
        <item>De alta calidad</item>
        <item>De muy alta calidad</item>
        <item>De la mejor calidad disponible</item>
    </string-array>
    <string-array name="pref_size_album_art_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>1000</item>
    </string-array>
    <string name="default_sort">Ordenar por</string>
    <string-array name="pref_sort_titles">
        <item>Ubicación de archivo</item>
        <item>Título</item>
        <item>Artista</item>
        <item>Álbum</item>
    </string-array>
    <string-array name="pref_sort_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="info_found">Se encontraron las siguientes etiquetas.</string>
    <string name="incomplete_info_found">Faltaron algunas etiquetas para </string>
    <string name="cancel_task">¿Desea cancelar la corrección en curso?</string>
    <string name="cancelling">Cancelando corrección…</string>
    <string name="processing_task">Espera a que termine la corrección en modo automático por favor.</string>
    <string name="api_initialized">Toca cualquier canción para corregirla.</string>
    <string name="api_initialized2">Toca + para ver más opciones.</string>
    <string name="remove_from_list">Remover</string>
    <string name="question_1">¿Lorem ipsum dolor sit amet?</string>
    <string name="answer_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat.
        Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mp3_type">mp3</string>
    <string name="title_remove_cover_art_dialog">Remover carátula</string>
    <string name="message_remove_cover_art_dialog">¿Estas seguro de querer remover la carátula?</string>
    <string name="automatic_mode">Modo automático</string>
    <string name="update_list">Reescanear</string>
    <string name="album">Álbum</string>
    <string name="genre">Género</string>
    <string name="track_number">Número de pista</string>
    <string name="title">Título</string>
    <string name="artist">Artista</string>
    <string name="track_year">Año de publicación</string>
    <string name="semi_automatic_mode">Modo semiautomático</string>
    <string name="sort_by">Ordenar por</string>
    <string name="location">Ubicación</string>
    <string name="descendent">Descendente</string>
    <string name="ascendent">Ascendente</string>
    <string name="about">Sobre AutoMusicTagFixer</string>
    <string name="more">Más</string>
    <string name="message_results_cover">Se encontró la siguiente carátula, guardarla como:</string>
    <string name="accept">Aceptar</string>
    <string name="hint_rename">Nombre sin extensión</string>
    <string name="message_checkbox_rename">Renombrar archivo</string>
    <string name="message_rename">Dejar vacío para usar el título(si esta disponible) como nombre.</string>
</resources>