<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tooltipText="@string/more">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_song"
        android:icon="@drawable/ic_search_white_24px"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_refresh"
        app:showAsAction="never"
        android:title="@string/update_list"
        android:icon="@drawable/ic_refresh_white_24px"/>

    <item
        android:id="@+id/action_select_all"
        app:showAsAction="never"
        android:title="@string/select_all_items"
        android:icon="@drawable/ic_check_box_white_24px" />
    <item
        android:id="@+id/sortBy"
        app:showAsAction="never"
        android:title="@string/sort_by">
        <menu>
            <item
                android:id="@+id/action_sort_by_path"
                app:showAsAction="never"
                android:title="@string/location">
                <menu>
                    <item
                        android:id="@+id/path_asc"
                        app:showAsAction="never"
                        android:title="@string/ascendent" />
                    <item
                        android:id="@+id/path_desc"
                        app:showAsAction="never"
                        android:title="@string/descendent" />
                </menu>
            </item>


            <item
                android:id="@+id/action_sort_by_title"
                app:showAsAction="never"
                android:title="@string/title">
                <menu>
                    <item
                        android:id="@+id/title_asc"
                        app:showAsAction="never"
                        android:title="@string/ascendent" />
                    <item
                        android:id="@+id/title_desc"
                        app:showAsAction="never"
                        android:title="@string/descendent" />
                </menu>
            </item>
            <item
                android:id="@+id/action_sort_by_artist"
                app:showAsAction="never"
                android:title="@string/artist">
                <menu>
                    <item
                        android:id="@+id/artist_asc"
                        app:showAsAction="never"
                        android:title="@string/ascendent" />
                    <item
                        android:id="@+id/artist_desc"
                        app:showAsAction="never"
                        android:title="@string/descendent" />
                </menu>
            </item>

            <item
                android:id="@+id/action_sort_by_album"
                app:showAsAction="never"
                android:title="@string/album">
                <menu>
                    <item
                        android:id="@+id/album_asc"
                        app:showAsAction="never"
                        android:title="@string/ascendent" />
                    <item
                        android:id="@+id/album_desc"
                        app:showAsAction="never"
                        android:title="@string/descendent" />
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/toggle_theme"
        app:showAsAction="never"
        android:title="@string/enable_dark_mode"/>
</menu>
