<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
            android:id="@+id/menu_top"
            android:checkableBehavior="none">
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/options" />
        </group>
        <group
            android:id="@+id/menu_bottom"
            android:checkableBehavior="none">
                        <item
                            android:id="@+id/rate"
                            android:icon="@drawable/ic_star_black_24dp"
                            android:title="@string/rate" />
                        <item
                            android:id="@+id/share"
                            android:icon="@drawable/ic_menu_share"
                            android:title="@string/share"/>
                        <item
                            android:id="@+id/faq"
                            android:title="@string/faq"
                            android:icon="@drawable/ic_help_black_24dp"
                            />
        </group>

</menu>
