<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- will be released as future feature-->
    <!--item android:id = "@+id/order_by"
        app:showAsAction="ifRoom|collapseActionView"
        android:icon="@drawable/ic_sort_white_24px" /-->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24px"
        android:title="@string/search_song"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/go_to_current_playback"
        app:showAsAction="ifRoom|collapseActionView"
        android:title=""
        android:icon="@drawable/ic_music_note_white_24px"/>
    <item
        android:id="@+id/select_all"
        app:showAsAction="never"
        android:title="@string/select_all_items"
        android:icon="@drawable/ic_check_box_white_24px" />
    <item
        android:id="@+id/eraseCache"
        app:showAsAction="never"
        android:title="@string/delete_cache"/>
    <item
        android:id="@+id/faq"
        app:showAsAction="never"
        android:title="@string/faq"/>

</menu>
