<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/manual_correction_container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="8dp"
  android:layout_alignParentStart="true"
  android:layout_gravity="start"
  android:splitMotionEvents="false">


    <CheckBox
      android:id="@+id/manual_checkbox_rename"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/message_checkbox_rename"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    <android.support.design.widget.TextInputLayout
      android:id="@+id/manual_label_rename_to"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_below="@id/manual_checkbox_rename"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      android:labelFor="@id/rename_to"
      android:theme="@style/CustomEditTextHint"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/manual_checkbox_rename"
      tools:visibility="visible">
        <EditText
          android:id="@+id/manual_rename_to"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_rename" />
    </android.support.design.widget.TextInputLayout>
    <TextView
      android:id="@+id/manual_message_rename_hint"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_below="@id/manual_label_rename_to"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      android:gravity="center_horizontal"
      android:maxLines="1"
      android:singleLine="true"
      android:text="@string/message_rename"
      android:textSize="12sp"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/manual_label_rename_to"
      tools:visibility="visible" />
    <Button
      android:id="@+id/accept_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/cancel_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/manual_message_rename_hint" />
    <Button
      android:id="@+id/cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:text="@string/accept"
      app:layout_constraintEnd_toStartOf="@+id/accept_button"
      app:layout_constraintTop_toBottomOf="@+id/manual_message_rename_hint" />
</android.support.constraint.ConstraintLayout>
