<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trackIdCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="false"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:alpha="0"
    android:elevation="@dimen/cardview_default_elevation"
    android:padding="8dp"
    android:visibility="gone"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/trackIdItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_gravity="left"
        android:splitMotionEvents="false">

        <ImageView
            android:id="@+id/trackidCoverArt"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:transitionName="transitionFragment"
            app:srcCompat="@drawable/ic_album_white_48px" />

        <TextView
            android:id="@+id/trackidCoverArtDimensions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/trackidCoverArt"
            android:drawableStart="@drawable/ic_photo_size_select_large_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/no_cover_art" />

        <TextView
            android:id="@+id/trackidTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trackidCoverArtDimensions"
            android:layout_centerInParent="false"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/trackidCoverArt"
            android:drawableStart="@drawable/ic_music_note_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/title"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trackidArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/trackidTitle"
            android:layout_below="@+id/trackidTitle"
            android:drawableStart="@drawable/ic_account_circle_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/artist"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trackidAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/trackidArtist"
            android:layout_below="@+id/trackidArtist"
            android:layout_toEndOf="@+id/coverArt"
            android:drawableStart="@drawable/ic_album_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/album"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trackidGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/trackidAlbum"
            android:layout_below="@+id/trackidAlbum"
            android:drawableStart="@drawable/ic_queue_music_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/genre"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trackidNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/trackidGenre"
            android:layout_below="@+id/trackidGenre"
            android:drawableStart="@drawable/ic_format_list_numbered_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/track_number"
            android:visibility="gone" />

        <TextView
            android:id="@+id/trackidYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/trackidNumber"
            android:layout_below="@+id/trackidNumber"
            android:drawableStart="@drawable/ic_date_range_white_24px"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/track_year"
            android:textSize="14sp"
            android:visibility="gone" />

    </RelativeLayout>


</android.support.v7.widget.CardView>